Actualizacion de archivos para idioma ingles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="contenedor">
             <div class="contenedorTexto">
                 <div class="texto">
-                    <h1 class="nombre">Amanda De La Cruz</h1>
+                    <h1 class="nombre">Amanda De La Cruz Martinez</h1>
                     <h2 class="profesion">Computer Science Student.</h2>
                 </div>
 
@@ -34,12 +34,12 @@
                 </div>
 
                 <div class="texto">
-                    <h3 class="titulo">Resumen profesional</h3>
+                    <h3 class="titulo">Professional Summary</h3>
                     <p>
-                        Me titule como tecnico en enfermeria general, pero no ejerci la carrera, durante aproximadamente
-                        5 años trabaje en una fabrica de toallitas como inspector de calidad y actualmente estoy
-                        estudiante la carrera de ingenieria en informatica en la universidad de guadalajara campus
-                        CUCEI.
+                        I graduated as a General Nursing Technician, but I didn't practice the profession. For about 5
+                        years, I worked at a wipes factory as a quality inspector. I hold a certification in ISO
+                        9001:2015 & ISO 19011:2018, and currently, I'm studying Computer Engineering at the University
+                        of Guadalajara, CUCEI campus.
                     </p>
                 </div>
             </div>
@@ -47,91 +47,94 @@
         <section class="historial">
             <div class="contenedor">
                 <div class="mitad-izquierda">
-                    <h3 class="titulo">Habilidades</h3>
+                    <h3 class="titulo">Ability</h3>
                     <ul>
-                        <li>Conocimientos en Enfermeria - 60%.</li>
-                        <li>Realizacion de cultivos en placa petrifilm - 100%</li>
-                        <li>Diseño web - 60%</li>
-                        <li>Programacion - 50%.</li>
-                        <li>Responsabilidad - 90%</li>
+                        <li>Nursing Knowledge - 60%.</li>
+                        <li>Petrifilm plate cultures- 100%</li>
+                        <li>Web Design- 60%</li>
+                        <li>Programming - 50%.</li>
                     </ul>
-                    <h3 class="titulo">Idiomas</h3>
+                    <br><br><br><br>
+                    <div class="linea"></div> <!-- Linea separadora -->
+                    <h3 class="titulo">languages</h3>
                     <ul>
-                        <li>Español- 100%.</li>
-                        <li>Ingles - 40%</li>
+                        <li>Spanish- 100%.</li>
+                        <li>English - 40%</li>
                     </ul>
+                    <br><br><br><br><br>
+                    <div class="linea"></div> <!-- Linea separadora -->
 
-                    <h3 class="titulo">Experiencia en proyectos</h3>
+                    <h3 class="titulo">Experience in projects</h3>
                     <ul>
-                        <li>Conocimientos en Enfermeria - 60%.</li>
-                        <li>Realizacion de cultivos en placa petrifilm - 100%</li>
-                        <li>Diseño web - 60%</li>
-                        <li>Programacion - 50%.</li>
-                        <li>Responsabilidad - 90%</li>
+                        <li>Web page design</li>
+                        <li>Desktop pages</li>
+                        <li>Database </li>
                     </ul>
+                    <br><br>
+                    <div class="linea"></div> <!-- Linea separadora -->
 
-                    <h3 class="titulo">Intereses profesionales</h3>
+                    <h3 class="titulo">Professional Interests</h3>
                     <ul>
-                        <li>Desarollo de software.</li>
-                        <li>Diseño web</li>
+                        <li>Software Development.</li>
+                        <li>Web Design.</li>
                     </ul>
+                    <br><br><br>
+                    <div class="linea"></div> <!-- Linea separadora -->
                     <h3 class="titulo">Software</h3>
                     <ul>
                         <li>Postgrest - 60%.</li>
-                        <li>Adobe animate - 100%</li>
+                        <li>Adobe animate - 50%</li>
                         <li>Visual Studio Code- 60%</li>
-                        <li>Adobe illustrator.</li>
+                        <li>Adobe illustrator - 50%.</li>
+                        <li>Windows - 70.</li>
                     </ul>
                 </div>
                 <div class="mitad-derecha">
-                    <h3 class="titulo">Experiencia Laboral</h3>
+                    <h3 class="titulo">Professional Experience </h3>
                     <div class="trabajo">
-                        <h2>Inspector de calidad.</h2>
-                        <p><strong>Empresa:</strong> BETONE </p>
-                        <p><strong>Fecha:</strong> Enero 2016 - Febrero 2021</p>
-                        <p><strong>Descripción:</strong> Trabajé en el area de calidad inspeccionando la materia prima y
-                            el
-                            producto terminado, realice cultivos de microbiologia, asi como tambien realice capturas
-                            mensuales
-                            de las mermas de toda la materia prima.</p>
+                        <h3>Quality Inspector.</h3>
+                        <p><strong>Company:</strong> BETONE </p>
+                        <p><strong>Date:</strong> January 2016 - February 2021</p>
+                        <p><strong>Description:</strong> I worked in the quality department inspecting raw materials and
+                            finished products. I conducted microbiology cultures and performed monthly data collection
+                            of waste for all raw materials.</p>
                     </div>
 
-                    <div class="linea"></div> <!-- Línea separadora -->
+                    <div class="linea"></div> <!-- Linea separadora -->
                     <div class="trabajo">
-                        <h3>Asesor De Ventas</h3>
-                        <p><strong>Empresa:</strong> ADVENTURE BIKE RIDER</p>
-                        <p><strong>Fecha:</strong> Septiembre 2014 - Enero 2015</p>
-                        <p><strong>Descripción:</strong> Trabaje como asesor de ventas de bicicletas de montaña, ruta y
-                            triaton, asi como todo tipo de accesorios de ciclismo. Dentro de mis labores estaban la
-                            atencion al cliente, acomodo de material, su limpieza y etiquetado de precios del mismo.
+                        <h3>Sales consultant</h3>
+                        <p><strong>Company:</strong> ADVENTURE BIKE RIDER</p>
+                        <p><strong>Date:</strong> September 2014 - January 2015</p>
+                        <p><strong>Description:</strong> I worked as a sales advisor for mountain, road, and triathlon
+                            bicycles, as well as all types of cycling accessories. My duties included customer service,
+                            merchandise arrangement, cleaning, and price tagging of the same.
                         </p>
                     </div>
 
-                    <div class="linea"></div> <!-- Línea separadora -->
+                    <div class="linea"></div> <!-- Linea separadora -->
                     <div class="trabajo">
-                        <h3>Pasante De Enfermeria.</h3>
-                        <p><strong>Empresa:</strong> CENTRO MEDICO ACATEPEC</p>
-                        <p><strong>Fecha:</strong> agosto 2013 - agosto 2014</p>
-                        <p><strong>Descripción:</strong> Durante la realizacion del servicio mi trabajo fue la atencion
-                            del paciente, dentro de mis labores, aplique conociemiento basicos de enfermeria como
-                            seguimiento de expediente clinicos, relizacion de muestras de sangre, canalizaciones, toma
-                            de signos vitales, muestras de citologias, curaciones de heridas, inyecciones, realizacion
-                            de puntos, etc. .</p>
+                        <h3>Nursing Intern.</h3>
+                        <p><strong>Company:</strong> ACATEPEC MEDICAL CENTER</p>
+                        <p><strong>Date:</strong> August 2013 - August 2014</p>
+                        <p><strong>Description:</strong>
+                            During the service, my job was patient care. As part of my duties, I applied basic nursing
+                            knowledge, such as maintaining clinical records, collecting blood samples, administering
+                            IVs, taking vital signs, collecting cytology samples, wound dressings, injections, suturing,
+                            etc.</p>
                     </div>
 
-                    <h3 class="titulo">Formacion Academica</h3>
+                    <h3 class="titulo">Academic Background</h3>
                     <div class="academia">
-                        <h2>Estudiante en Tecnico en Enfermeria General.</h2>
-                        <p><strong>Escuela:</strong> Colegio De Estudios cientificos y tecnologicos de estado de Hidalgo
-                            - CECYTEH.</p>
-                        <p><strong>Fecha:</strong> Julio 2010 - julio 2013</p>
+                        <h3>Student in General Nursing Technician.</h3>
+                        <p><strong>School:</strong> College of Scientific and Technological Studies of the State of Hidalgo - CECYTEH.</p>
+                        <p><strong>Date:</strong> July 2010 - July 2013</p>
                     </div>
-                    <div class="linea"></div> <!-- Línea separadora -->
+                    <div class="linea"></div> <!-- Linea separadora -->
                     <div class="academia">
-                        <h2>Estudiante en ingenieria en informatica.</h2>
-                        <p><strong>Escuela:</strong> Centro universitario de ciencias exactas e ingenierias - CUCEI .
+                        <h3>Student in Computer Engineering.</h3>
+                        <p><strong>Escuela:</strong> University Center for Exact Sciences and Engineering  - CUCEI .
                         </p>
-                        <p><strong>Fecha:</strong> Julio 2010 - julio 2013</p>
+                        <p><strong>Date:</strong> August 2021 - Present</p>
                     </div>
                 </div>
             </div>
@@ -143,22 +146,24 @@
     <footer>
         <section class="contacto">
             <div class="contenedor">
-                <h3 class="titulo">Contacto</h3>
-                <form class="formulario" action="">
-                    <input type="text" placeholder="Numero: 3310740564" name="nombre" required>
-                    <input type="email" placeholder="Correo:amanda.de.la.cruz.martinez1995@gmail.com" name="correo" required>
-                   
-                </form>
+                <h3 class="titulo">Contact</h3>
+                <p>Phone: 3310740564</p>
+                <p>Email: amanda.de.la.cruz.martinez1995@gmail.com</p>
+                <p>Age: 28 </p>
+                <p>Nacionality: Mexican</p>
+                <h3 class="titulo">Social Media</h3>
+                <a href="https://www.twitter.com/">twitter</a>
             </div>
         </section>
 
         <section class="redesSociales">
             <div class="contenedor">
-                <a href="https://www.twitter.com/" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a>
-                <a href="https://www.github.com/" class="github"><i class="fa fa-github"></i></a>
-                <a href="https://www.instagram.com/" class="instagram"><i class="fa fa-instagram"></i></a>
+                <h3>REFERENCES: </h3>
+                <ul>
+                    <li>Chemical Engineer: Diana Villegas.</li>
+                    <li>Computer Systems Engineer: Martin Gonzalez Gonlalez.</li>
+
+                </ul>
             </div>
         </section>
     </footer>
