Modificacion de ingles

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div class="texto">
                     <h3 class="titulo">Professional Summary</h3>
                     <p>
-                        I graduated as a General Nursing Technician, but I didn't practice the profession. For about 5
-                        years, I worked at a wipes factory as a quality inspector. I hold a certification in ISO
-                        9001:2015 & ISO 19011:2018, and currently, I'm studying Computer Engineering at the University
+                        I graduated as a General Nursing Technician, but I didn't practice the profession. For 5
+                        years, I worked as a QA inspector in a baby wipes factory. I hold a certification in ISO
+                        9001:2015 & ISO 19011:2018. Currently, I am Bachelor Degree in Computer Science at the University
                         of Guadalajara, CUCEI campus.
                     </p>
                 </div>
@@ -58,8 +58,8 @@
                     <div class="linea"></div> <!-- Linea separadora -->
                     <h3 class="titulo">languages</h3>
                     <ul>
-                        <li>Spanish- 100%.</li>
-                        <li>English - 40%</li>
+                        <li>Spanish- 80%.</li>
+                        <li>English - 20%</li>
                     </ul>
                     <br><br><br><br><br>
                     <div class="linea"></div> <!-- Linea separadora -->
@@ -96,7 +96,7 @@
                         <p><strong>Company:</strong> BETONE </p>
                         <p><strong>Date:</strong> January 2016 - February 2021</p>
                         <p><strong>Description:</strong> I worked in the quality department inspecting raw materials and
-                            finished products. I conducted microbiology cultures and performed monthly data collection
+                            finished products. Conducted microbiology cultures and performed monthly data collection
                             of waste for all raw materials.</p>
                     </div>
 
