--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <!--nota: indica el idioma principal utilizado en el contenido de nuestra pagina web -->
 
 <head>
